# binary

./: .buildconfig  .gitignore  CONTRIBUTING.md  README.md  binary.doap  io.fizzyizzy05.binary.json  io.github.fizzyizzy05.binary.Devel.json  io.github.fizzyizzy05.binary.json  meson.build  update_translations.sh
.github/workflows/: ci.yml
data/: io.fizzyizzy05.binary.desktop.in  io.fizzyizzy05.binary.gschema.xml  io.fizzyizzy05.binary.metainfo.xml.in  io.github.fizzyizzy05.binary.desktop.in  io.github.fizzyizzy05.binary.desktop.in.in  io.github.fizzyizzy05.binary.gschema.xml  io.github.fizzyizzy05.binary.metainfo.xml.in  io.github.fizzyizzy05.binary.metainfo.xml.in.in  io.github.fizzyizzy05.binary.service.in  meson.build
data/icons/: meson.build
po/: LINGUAS  POTFILES  ar.po  bg.po  binary.pot  ca.po  cs.po  de.po  el.po  es.po  et.po  eu.po  fi.po  fr.po  he.po  hr.po  ia.po  io.github.fizzyizzy05.binary.pot  it.po  ja.po  ka.po  kk.po  kw.po  meson.build  ml.po  nb_NO.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  ta.po  te.po  tr.po  uk.po  zh_Hans.po
repo/: summary  summary.idx
repo/refs/heads/app/io.github.fizzyizzy05.binary.Devel/x86_64/: master
repo/refs/heads/runtime/io.github.fizzyizzy05.binary.Devel.Locale/x86_64/: master
repo/summaries/: 2ca40612a4a33ae2438764eb1ba225262d37a2275ce35b38a4a2ea1de7dc9eb7-ea6b91fa8f142d220a461431b2bc43037e1c0725d144376d862df108b745715b.delta  55663466d0aaefc9038c507a39a205993db753d2fc574e92d4686fd11722d4d0-ea6b91fa8f142d220a461431b2bc43037e1c0725d144376d862df108b745715b.delta  b2a8110ae86463c25f5218b2572cde96b043c448eb17b437a0a99d20036b167d-ea6b91fa8f142d220a461431b2bc43037e1c0725d144376d862df108b745715b.delta  e65bd3599ecbc95d0011160c03d791e4b30107e1bf473a161c7c4657cc8bad8d-ea6b91fa8f142d220a461431b2bc43037e1c0725d144376d862df108b745715b.delta  ee5d117b36486e70033e90bf06fd2b3f77a8d43d3ed82a99707b5ebe0430dd20-ea6b91fa8f142d220a461431b2bc43037e1c0725d144376d862df108b745715b.delta
src/: binary.gresource.xml  binary.gresource.xml.in  binary.in  bindec.py  bitCount.py  hexcalc.py  main.py  meson.build  preferences.blp  preferences.py  preferences.ui  profile.py.in  shortcuts-dialog.blp  style-dark.css  style-hc.css  style.css  window.blp  window.css  window.py  window.ui
src/gtk/: help-overlay.blp  help-overlay.ui
src/lib/: bit_count.py  get_answer.py  twos_compliment.py
src/widgets/: input_view.blp  input_view.py
